--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     background-color: hsl(212, 45%, 89%);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -31,4 +32,11 @@ body{
     font-size: 15px;
     color: hsl(216, 15%, 48%);
     font-family: 'Outfit', sans-serif;
+}
+
+.attribution{
+    position: fixed;
+    bottom: 0;
+    font-size: 15px;
+    padding: 10px;
 }
